feat: guess the word functionality

--- a/index.html
+++ b/index.html
@@ -43,21 +43,14 @@
       </ul>
     </div>
 
-    <p class="category-text">The Chosen Category Is <span id="category-name"></span>Films</p>
+    <p class="category-text">The Chosen Category Is <span id="category-name"></span></p>
 
     <div class="word-container">
-      <ul id="word">
-        <li class="guess">_</li>
-        <li class="guess">_</li>
-        <li class="guess">_</li>
-        <li class="guess">_</li>
-        <li class="guess">_</li>
-        <li class="guess">_</li>
-      </ul>
+      <ul id="word"></ul>
     </div>
 
-    <p class="lives-text">You Have <span id="lives"> 10 </span>lives</p>
-
+    <p class="lives-text">You Have <span id="lives"> 10 </span> lives</p>
+    <p class="clue-text">Clue - <span id="clue"> </span></p>
     <canvas id="stickman"> </canvas>
     <div class="btns">
       <button id="hint">Hint</button>
